# ppocr

./: .gitignore  README.md  pyproject.toml  test_ppocr.py
.github/workflows/: ci.yml
src/ppocr/: __init__.py  ocr.py  ppocr.py  types.py  utils.py
src/ppocr/detection/: db_fpn.py  db_head.py  db_postprocess.py  detector.py
src/ppocr/models/: mobilenet_v1.py  mobilenet_v3.py
src/ppocr/recognition/: __init__.py  ctc_head.py  recognizer.py  svtr.py
