[project]
name = "ppocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "jblemoine", email = "jeanbaptistelemoine@hotmail.fr" }
]
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.11.0.86",
    "pyclipper>=1.3.0.post6",
    "requests>=2.32.3",
    "shapely>=2.1.0",
    "torch>2.0.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "pre-commit"
]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]

[tool.mypy]
ignore_missing_imports = true


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
